@@ -1,3 +1,5 @@
+* Manage preferred size
+
 Version 0.7.2 - 2021-03-28
 * Add support GooCanvas 3.0
 * Add selected text color property
